[package]
name = "code"
version = "0.1.0"
authors = ["Martin Kielhorn <kielhorn.martin@gmail.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = "*"
glfw = "0.31.0"
gl = "0.14.0"
imgui-glfw-rs = "0.4.1"
imgui = "0.1.0"
imgui-opengl-renderer = "0.5.0"
